Refactord Endorsement object into GettingStartedData

--- a/Pear/Controllers/Onboarding/Get Started Flow/Photo Input/GetStartedPhotoInputViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Photo Input/GetStartedPhotoInputViewController.storyboard
@@ -46,6 +46,9 @@
                                 <state key="normal" title="Review Profile">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="nextButtonClicked:" destination="ijs-Hi-GZa" eventType="touchUpInside" id="Pit-GE-gUU"/>
+                                </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hkq-lK-kn9">
                                 <rect key="frame" x="20" y="238" width="335" height="319"/>
